# template-rs-server

./: .gitignore  Cargo.toml  Dockerfile  Puzzled.toml  README.md  SECURITY.md  example.env
.config/: docker.config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  tracking.md
.github/workflows/: docker.yml  release.yml  rust.yml
src/: context.rs  error.rs  lib.rs  macros.rs  primitives.rs  utils.rs
src/cmd/: interface.rs  mod.rs  opts.rs
src/cmd/opts/: build.rs  deploy.rs  serve.rs
src/config/: mod.rs  settings.rs
src/config/kinds/: logger.rs  network.rs  scope.rs
src/macros/: fmt.rs  setters.rs
src/platform/: builder.rs  config.rs  context.rs  interface.rs  mod.rs
src/platform/cmd/: mod.rs
src/platform/events/: event.rs  mod.rs
src/traits/: handle.rs  mod.rs
src/types/: application.rs  environment.rs  mod.rs  mode.rs  netaddr.rs  power.rs  stage.rs  timestamp.rs
src/workers/: build.rs  config.rs  mod.rs  workspace.rs
src/workers/serve/: actor.rs  context.rs  mod.rs
tests/: platform.rs
