[package]
authors = ["FL03 <jo3mccain@icloud.com>",]
categories = [ ]
description = "A production ready server optimized for WASM applications"
edition = "2021"
homepage = "https://github.com/FL03/pzzld-server/wiki"
keywords = [ "application", "cli", "server", "wasm", ]
license = "Apache-2.0"
name = "pzzld-server"
readme = "README.md"
repository = "https://github.com/FL03/pzzld-server.git"
version = "0.0.1"

[[bin]]
name = "pzzld"
path = "bin/pzzld.rs"

[features]
default = [
    "http1",
]

full = [
    "default",
    "ws",
]

# ********* [FF] Features *********
http1 = [
    "axum/http1",
    "hyper/http1",
]

http2 = [
    "axum/http2",
    "hyper/http2",
]

ws = [
    "axum/ws",
]

[lib]
crate-type = ["cdylib", "rlib"]
name = "puzzled"

[build-dependencies]

[dev-dependencies]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
config = "0.14"
lazy_static = "1"
paste = "1"
serde_json = "1"
smart-default = "0.7"
thiserror = "1"

[dependencies.axum]
features = ["macros"]
version = "0.7"

[dependencies.clap]
features = ["derive", "env"]
version = "4"

[dependencies.hyper]
features = ["full"]
version = "1"

[dependencies.hyper-util]
features = ["full"]
version = "0.1"

[dependencies.rand]
version = "0.8"

[dependencies.scsys]
features = ["chrono"]
version = "0.2.3"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.strum]
features = ["derive"]
version = "0.26"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.tokio-util]
features = ["full"]
version = "0.7"

[dependencies.tower]
features = ["full"]
version = "0.5"

[dependencies.tower-http]
features = ["full"]
version = "0.6"

[dependencies.tracing]
features = ["log"]
version = "0.1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[dependencies.uuid]
features = ["v4"]
version = "1"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown]

[target.wasm32-wasi]
